--- a/src/app/components/authentication/register/register.component.html
+++ b/src/app/components/authentication/register/register.component.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Cadastro</title>
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../authentication/styles.css"> -->
 </head>
@@ -21,20 +21,23 @@
     <main class="formulario">
         <section class="formulario__caixa">
             <div class="formulario__caixa__header">
-                <h1>Login</h1>
+                <h1>Cadastro</h1>
                 <hr>
             </div>
-            <form class="formulario__caixa__form" [formGroup]="loginForm" (ngSubmit)="addlogin()">
+            <form class="formulario__caixa__form" [formGroup]="registerForm" (ngSubmit)="addRegisterUser()">
                 <div class="formulario__caixa__form__caixa">
-                    <label for="loginEmail">Email</label>
-                    <input type="text" id="loginEmail" name="loginEmail" formControlName="Email">
+                    <label for="name">Nome</label>
+                    <input type="text" id="name" name="name" formControlName="UserName">
                 </div>
                 <div class="formulario__caixa__form__caixa">
-                    <label for="loginPassword">Senha</label>
-                    <input type="text" id="loginPassword" name="loginPassword" formControlName="Password">
+                    <label for="femail">Email</label>
+                    <input type="text" id="femail" name="femail" formControlName="Email">
                 </div>
-                <button class="formulario__caixa__botao" type="submit"><p>Login</p></button>
-                <!-- <a class="formulario__caixa__botao" [routerLink]="'home'"><p>Login</p></a> -->
+                <div class="formulario__caixa__form__caixa">
+                    <label for="fpassword">Senha</label>
+                    <input type="text" id="fpassword" name="fpassword" formControlName="Password">
+                </div>
+                <button class="formulario__caixa__botao" type="submit"><p>Cadastrar</p></button>
             </form>
         </section>
     </main>
