--- a/src/app/components/authentication/login/login.component.html
+++ b/src/app/components/authentication/login/login.component.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="../authentication/styles.css"> -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <!-- <link rel="stylesheet" href="../authentication/styles.css"> -->
 </head>
 <body>
     <header class="cabecalho">
@@ -31,9 +31,14 @@
                 </div>
                 <div class="formulario__caixa__form__caixa">
                     <label for="loginPassword">Senha</label>
-                    <input type="text" id="loginPassword" name="loginPassword" formControlName="Password">
+                    <div class="formulario__caixa__form__caixa__password">
+                        <input [type]="isTypePassword ? 'password' : 'text'" id="loginPassword" name="loginPassword" formControlName="Password" [ngStyle]="">
+                        <i class="bi bi-eye" [ngStyle]="{'display': isTypePassword ? '' : 'none', 'font-size': '20px'}" (click)="viewPassword()"></i>
+                        <i class="bi bi-eye-slash" [ngStyle]="{'display': isTypePassword ? 'none' : '', 'font-size': '20px'}" (click)="viewPassword()"></i>
+                    </div>
                 </div>
                 <button class="formulario__caixa__botao" type="submit"><p>Login</p></button>
+                
                 <!-- <a class="formulario__caixa__botao" [routerLink]="'home'"><p>Login</p></a> -->
             </form>
         </section>
@@ -41,7 +46,7 @@
     <footer class="rodape">
         <p>Desenvolvido por <a href="https://www.linkedin.com/in/brunoantonioalexandrinodasilva/">Bruno Antonio</a></p>
     </footer>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="../js/main.js"></script> -->
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> -->
+    <!-- <script src="../js/main.js"></script> -->
 </body>
 </html>
