--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,13 @@
 @import 'flatpickr/dist/flatpickr.css';
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.snack-success {
+    background-color: #4caf50; /* verde */
+    color: #fff;
+  }
+  
+  .snack-error {
+    background-color: #f44336; /* vermelho */
+    color: #fff;
+  }
